# haskell-regexp

./: .ghci  .gitignore  CHANGES.html  CHANGES.markdown  LICENSE  Makefile  Parser.y  README.markdown  RegExp.hs  Setup.hs  changes.css  criterion.lhs  index.html  quickcheck.lhs  regexp.cabal  style.css  tests.hs  weighted-regexp.cabal
Data/: Semiring.hs
Data/Semiring/: Properties.hs
Text/: RegExp.hs
Text/RegExp/: Data.hs  Matcher.hs  Matching.hs  Parser.y  Simple.hs
Text/RegExp/Matching/: LeftLong.hs  Leftmost.hs  Longest.hs
criterion/: full.csv  partial.csv
quickcheck/: Data.Semiring.Properties.hs.html  Data.Semiring.hs.html  Main.hs.html  Text.RegExp.Data.hs.html  Text.RegExp.Matching.LeftLong.Type.hs.html  Text.RegExp.Matching.LeftLong.hs.html  Text.RegExp.Matching.Leftmost.Type.hs.html  Text.RegExp.Matching.Leftmost.hs.html  Text.RegExp.Matching.Longest.Type.hs.html  Text.RegExp.Matching.Longest.hs.html  Text.RegExp.Matching.hs.html  Text.RegExp.Parser.hs.html  Text.RegExp.hs.html  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
src/: criterion.lhs  fullmatch.hs  partialmatch.hs  quickcheck.lhs
src/Data/: Semiring.hs
src/Text/: RegExp.hs
src/Text/RegExp/: Data.hs  Internal.hs  Matching.hs  Parser.y
src/Text/RegExp/Matching/: LeftLong.hs  Leftmost.hs  Longest.hs
src/Text/RegExp/Matching/LeftLong/: Type.hs
src/Text/RegExp/Matching/Leftmost/: Type.hs
src/Text/RegExp/Matching/Longest/: Type.hs
src/lib/Data/: Semiring.hs
src/lib/Text/: RegExp.hs
test/: match-regexp.hs  test-regexp-correctness.hs  tests.hs
test/correctness/: simple.regexp
