Name:          regexp
Version:       0.1
Cabal-Version: >= 1.6
Synopsis:      Regular Expressions in Haskell
Description:   to be supplied
Category:      Text, Parsing
License:       BSD3
License-File:  LICENSE
Author:        Thomas Wilke, Frank Huch, Sebastian Fischer
Maintainer:    Sebastian Fischer
Bug-Reports:   http://github.com/sebfisch/haskell-regexp/issues
Homepage:      http://github.com/sebfisch/haskell-regexp
Build-Type:    Simple
Stability:     experimental

Extra-Source-Files:     README.markdown, test/tests.hs

Library
  Build-Tools:          happy >= 1.17
  Build-Depends:        base >= 3 && < 5, array >= 0.1, containers == 0.2.*
  Exposed-Modules:      Text.RegExp
  Other-Modules:        Text.RegExp.Data,
                        Text.RegExp.Parser,
                        Text.RegExp.Matcher,
                        Text.RegExp.Simple
  Extensions:           FlexibleInstances,
                        TypeSynonymInstances,
                        NoMonomorphismRestriction

Executable match-regexp
  Main-Is:              match-regexp.hs
  Hs-Source-Dirs:       . test

Source-Repository head
  type:     git
  location: git://github.com/sebfisch/haskell-regexp.git
