Name:          weighted-regexp
Version:       1.0
Cabal-Version: >= 1.6
Synopsis:      Weighted Regular Expression Matcher
Description:

        Haskell implementation of a weighted regular expression
        matcher with linear worst-case time and space bounds.

Category:      Text, Parsing
License:       BSD3
License-File:  LICENSE
Author:        Thomas Wilke, Frank Huch, Sebastian Fischer
Maintainer:    Sebastian Fischer
Bug-Reports:   http://github.com/sebfisch/haskell-regexp/issues
Homepage:      http://github.com/sebfisch/haskell-regexp
Build-Type:    Custom
Stability:     experimental

Library
  Build-Tools:          happy >= 1.17
  Build-Depends:        base >= 3 && < 5,
                        array >= 0.1 && <= 0.2.0.0
  Exposed-Modules:      Text.RegExp,
                        Text.RegExp.Matching.Leftmost,
                        Text.RegExp.Matching.Longest,
                        Text.RegExp.Matching.LeftLong,
                        Data.Semiring,
                        Data.Semiring.Properties
  Other-Modules:        Text.RegExp.Data,
                        Text.RegExp.Parser,
                        Text.RegExp.Matching
  Extensions:           RankNTypes,
                        BangPatterns,
                        FlexibleContexts,
                        FlexibleInstances,
                        MultiParamTypeClasses,
                        NoMonomorphismRestriction,
                        GeneralizedNewtypeDeriving

Flag quickcheck
  Description:          Build executable to run QuickCheck tests
  Default:              False

Executable quickcheck-weighted-regexp
  other-modules:        Text.RegExp,
                        Text.RegExp.Data
  Main-Is:              quickcheck.lhs
  Build-Depends:        base >= 3 && < 5, QuickCheck < 2
  Extensions:           FlexibleContexts,
                        ScopedTypeVariables,
                        MultiParamTypeClasses,
                        GeneralizedNewtypeDeriving
  GHC-Options:          -fhpc -fno-warn-missing-methods -fno-warn-orphans
  If !flag(quickcheck)
    Buildable:          False

Source-Repository head
  type:     git
  location: git://github.com/sebfisch/haskell-regexp.git
