Name:          weighted-regexp
Version:       0.3.0.0
Cabal-Version: >= 1.6
Synopsis:      Weighted Regular Expression Matcher
Description:

        Haskell implementation of a weighted regular expression
        matcher with linear worst-case time and space bounds.

Category:      Text, Parsing
License:       BSD3
License-File:  LICENSE
Author:        Thomas Wilke, Frank Huch, Sebastian Fischer
Maintainer:    Sebastian Fischer
Bug-Reports:   http://github.com/sebfisch/haskell-regexp/issues
Homepage:      http://sebfisch.github.com/haskell-regexp
Build-Type:    Simple
Stability:     experimental

Extra-Source-Files:     README.markdown CHANGES.markdown

Library
  Build-Tools:          happy >= 1.17
  Build-Depends:        base >= 3 && < 5,
                        array >= 0.1 && < 0.4
  HS-Source-Dirs:       src
  Exposed-Modules:      Text.RegExp,
                        Text.RegExp.Matching.Leftmost,
                        Text.RegExp.Matching.Longest,
                        Text.RegExp.Matching.LeftLong,
                        Data.Semiring,
                        Data.Semiring.Properties
  Other-Modules:        Text.RegExp.Data,
                        Text.RegExp.Parser,
                        Text.RegExp.Matching,
                        Text.RegExp.Matching.Leftmost.Type,
                        Text.RegExp.Matching.Longest.Type,
                        Text.RegExp.Matching.LeftLong.Type
  Extensions:           RankNTypes,
                        FlexibleContexts,
                        FlexibleInstances,
                        MultiParamTypeClasses,
                        NoMonomorphismRestriction,
                        GeneralizedNewtypeDeriving

Flag QuickCheck
  Description:          Build executable to run QuickCheck tests
  Default:              False

Executable quickcheck-re
  Main-Is:              quickcheck.lhs
  Build-Depends:        base >= 3 && < 5, QuickCheck < 2
  HS-Source-Dirs:       src
  Other-Modules:        Text.RegExp,
                        Text.RegExp.Matching.Leftmost,
                        Text.RegExp.Matching.Longest,
                        Text.RegExp.Matching.LeftLong,
                        Data.Semiring,
                        Data.Semiring.Properties
                        Text.RegExp.Data,
                        Text.RegExp.Parser,
                        Text.RegExp.Matching,
                        Text.RegExp.Matching.Leftmost.Type,
                        Text.RegExp.Matching.Longest.Type,
                        Text.RegExp.Matching.LeftLong.Type
  Extensions:           RankNTypes,
                        FlexibleContexts,
                        FlexibleInstances,
                        MultiParamTypeClasses,
                        NoMonomorphismRestriction,
                        GeneralizedNewtypeDeriving,
                        OverloadedStrings,
                        ScopedTypeVariables
  GHC-Options:          -fhpc -fno-warn-missing-methods -fno-warn-orphans
  If !flag(QuickCheck)
    Buildable:          False

Flag Criterion
  Description:          Build executable to run Criterion benchmarks
  Default:              False

Executable criterion-re
  Main-Is:              criterion.lhs
  Build-Depends:        base >= 3 && < 5, criterion >= 0.5 && < 0.6
  HS-Source-Dirs:       src
  Other-Modules:        Text.RegExp,
                        Text.RegExp.Matching.Leftmost,
                        Text.RegExp.Matching.Longest,
                        Text.RegExp.Matching.LeftLong,
                        Data.Semiring,
                        Text.RegExp.Data,
                        Text.RegExp.Parser,
                        Text.RegExp.Matching,
                        Text.RegExp.Matching.Leftmost.Type,
                        Text.RegExp.Matching.Longest.Type,
                        Text.RegExp.Matching.LeftLong.Type
  Extensions:           RankNTypes,
                        FlexibleContexts,
                        FlexibleInstances,
                        MultiParamTypeClasses,
                        NoMonomorphismRestriction,
                        GeneralizedNewtypeDeriving,
                        OverloadedStrings
  GHC-Options:          
  If !flag(Criterion)
    Buildable:          False

Source-Repository head
  type:     git
  location: git://github.com/sebfisch/haskell-regexp.git
